Change call-to-action text and section title

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     conceitos
                     filosóficos para aprimorar a liderança e a tomada de decisões na sua empresa.
                 </p>
-                <a href="contato.html" class="cta-button" data-i18n="heroCta">Agendar Demonstração</a>
+                <a href="contato.html" class="cta-button" data-i18n="heroCta">Baixar Sistema</a>
             </div>
             <div class="hero-image">
                 <img src="Imagem/LogoPi-removebg-preview.png" alt="Imagem de destaque da Pitágoras"
@@ -87,7 +87,7 @@
             </div>
         </section>
         <section class="times">
-            <h2 data-i18n="timesTitle">Áreas de Consultoria</h2>
+            <h2 data-i18n="timesTitle">Área das Equipes</h2>
             <p class="section-subtitle" data-i18n="timesSubtitle">A Pitágoras é composta por equipes especializadas,
                 cada
                 uma focada em uma área
