--- a/index.html
+++ b/index.html
@@ -94,32 +94,32 @@
                 fundamental da filosofia aplicada para aprimorar o seu negócio com precisão e profundidade.</p>
             <div class="times-container">
                 <div class="time time-grego">
-                    <a href="produtos.html">
+                    <a href="#time-grego">
                         <div class="time-logo" data-i18n="timeGregoLogo">GREGO</div>
                     </a>
                     <p class="time-title" data-i18n="timeGregoTitle">Time Grego: Filosofia Clássica</p>
-                    <a href="produtos.html" class="time-link" data-i18n="timeLink">Ver Mais</a>
+                    <a href="#time-romano" class="time-link" data-i18n="timeLink">Ver Mais</a>
                 </div>
                 <div class="time time-romano">
-                    <a href="produtos.html">
+                    <a href="#time-romano">
                         <div class="time-logo" data-i18n="timeRomanoLogo">ROMANO</div>
                     </a>
                     <p class="time-title" data-i18n="timeRomanoTitle">Time Romano: Ética e Direito</p>
-                    <a href="produtos.htmlhegel-img" class="time-link" data-i18n="timeLink">Ver Mais</a>
+                    <a href="#time-romano" class="time-link" data-i18n="timeLink">Ver Mais</a>
                 </div>
                 <div class="time time-alemao">
-                    <a href="produtos.html">
+                    <a href="#time-alemao">
                         <div class="time-logo" data-i18n="timeAlemaoLogo">ALEMÃO</div>
                     </a>
                     <p class="time-title" data-i18n="timeAlemaoTitle">Time Alemão: Lógica e Razão</p>
-                    <a href="produtos.html" class="time-link" data-i18n="timeLink">Ver Mais</a>
+                    <a href="#time-alemao" class="time-link" data-i18n="timeLink">Ver Mais</a>
                 </div>
                 <div class="time time-brasileiro">
-                    <a href="produtos.html">
+                    <a href="time-brasil">
                         <div class="time-logo" data-i18n="timeBrasilLogo">BRASIL</div>
                     </a>
                     <p class="time-title" data-i18n="timeBrasilTitle">Time Brasileiro: Pensamento Contemporâneo</p>
-                    <a href="produtos.html" class="time-link" data-i18n="timeLink">Ver Mais</a>
+                    <a href="time-brasil" class="time-link" data-i18n="timeLink">Ver Mais</a>
                 </div>
             </div>
         </section>
@@ -296,7 +296,7 @@
         </section>
         <br>
         <br>
-        <button data-i18n="btnAgenda">Baixar Sistema de Agendamento</button>
+        <button data-i18n="btnAgenda" class="Sistema">Baixar Sistema de Agendamento</button>
         <footer>
             <div class="footer-container">
                 <div class="footer-col about-col">
@@ -310,11 +310,11 @@
                 <div class="footer-col links-col">
                     <h4 data-i18n="footerNavTitle">Navegação</h4>
                     <ul>
-                        <li><a href="#home" data-i18n="footerLinkHome">Home</a></li>
-                        <li><a href="#sobre" data-i18n="footerLinkSobre">Sobre Nós</a></li>
-                        <li><a href="#areas" data-i18n="footerLinkAreas">Áreas de Consultoria</a></li>
-                        <li><a href="#etica" data-i18n="footerLinkEtica">Ética e Pilares</a></li>
-                        <li><a href="#contato" data-i18n="footerLinkContato">Contato</a></li>
+                        <li><a href="index.html" data-i18n="footerLinkHome">Home</a></li>
+                        <li><a href="sobre.html"footerLinkSobre">Sobre Nós</a></li>
+                        <li><a href="produtos.html" data-i18n="footerLinkAreas">Equipes</a></li>
+                        <li><a href="#mvv-cards" data-i18n="footerLinkEtica">Ética e Pilares</a></li>
+                        <li><a href="contato.html" data-i18n="footerLinkContato">Contato</a></li>
                     </ul>
                 </div>
                 <div class="footer-col contact-col">
@@ -322,11 +322,6 @@
                     <p data-i18n="footerEmail">Email: <a href="mailto:contato@pitagoras.com">contato@pitagoras.com</a>
                     </p>
                     <p data-i18n="footerPhone">Telefone: (11) 1234-5678</p>
-                    <div class="social-links">
-                        <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
-                        <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                        <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                    </div>
                 </div>
             </div>
         </footer>
