--- a/produtos.html
+++ b/produtos.html
@@ -62,7 +62,7 @@
       <p data-i18n="teams_subtitle">Escolha um dos grupos abaixo para ver os 6 pilares de conhecimento que guiam nossa
         consultoria:</p>
       <div class="time-filosofico time-grego" id="time-grego">
-        <h3 data-i18n="team_grego_title">Time Grego 🧠</h3>
+        <h3 data-i18n="team_grego_title">Time Grego</h3>
         <p class="time-descricao" data-i18n="team_grego_desc">Os pioneiros: a base do raciocínio crítico, da lógica e do
           autoconhecimento.</p>
         <div class="cartoes-container">
@@ -130,7 +130,7 @@
         </div>
       </div>
       <div class="time-filosofico time-romano" id="time-romano">
-        <h3 data-i18n="team_romano_title">Time Romano ⚖️</h3>
+        <h3 data-i18n="team_romano_title">Time Romano</h3>
         <p class="time-descricao" data-i18n="team_romano_desc">Os mestres da sabedoria aplicada à vida real: virtude,
           ética e controle emocional.</p>
         <div class="cartoes-container">
@@ -197,7 +197,7 @@
         </div>
       </div>
       <div class="time-filosofico time-alemao" id="time-alemao">
-        <h3 data-i18n="team_alemao_title">Time Alemão ⚙️</h3>
+        <h3 data-i18n="team_alemao_title">Time Alemão</h3>
         <p class="time-descricao" data-i18n="team_alemao_desc">Os estrategistas do pensamento: profundidade conceitual,
           idealismo e crítica radical.</p>
         <div class="cartoes-container">
@@ -265,7 +265,7 @@
       </div>
 
       <div class="time-filosofico time-brasil" id="time-brasil">
-        <h3 data-i18n="team_brasil_title">Time Brasileiro 🌎</h3>
+        <h3 data-i18n="team_brasil_title">Time Brasileiro</h3>
         <p class="time-descricao" data-i18n="team_brasil_desc">Os pensadores da prática: filosofia com impacto social,
           política e educacional.</p>
         <div class="cartoes-container">
@@ -348,11 +348,11 @@
         <div class="footer-col links-col">
           <h4 data-i18n="footerNavTitle">Navegação</h4>
           <ul>
-            <li><a href="#home" data-i18n="footerLinkHome">Home</a></li>
-            <li><a href="#sobre" data-i18n="footerLinkSobre">Sobre Nós</a></li>
-            <li><a href="#areas" data-i18n="footerLinkAreas">Áreas de Consultoria</a></li>
-            <li><a href="#etica" data-i18n="footerLinkEtica">Ética e Pilares</a></li>
-            <li><a href="#contato" data-i18n="footerLinkContato">Contato</a></li>
+            <li><a href="index.html" data-i18n="footerLinkHome">Home</a></li>
+            <li><a href="sobre.html" footerLinkSobre">Sobre Nós</a></li>
+            <li><a href="produtos.html" data-i18n="footerLinkAreas">Equipes</a></li>
+            <li><a href="#mvv-cards" data-i18n="footerLinkEtica">Ética e Pilares</a></li>
+            <li><a href="contato.html" data-i18n="footerLinkContato">Contato</a></li>
           </ul>
         </div>
         <div class="footer-col contact-col">
