--- a/sobre.html
+++ b/sobre.html
@@ -297,11 +297,11 @@
                 <div class="footer-col links-col">
                     <h4 data-i18n="footerNavTitle">Navegação</h4>
                     <ul>
-                        <li><a href="#home" data-i18n="footerLinkHome">Home</a></li>
-                        <li><a href="#sobre" data-i18n="footerLinkSobre">Sobre Nós</a></li>
-                        <li><a href="#areas" data-i18n="footerLinkAreas">Áreas de Consultoria</a></li>
-                        <li><a href="#etica" data-i18n="footerLinkEtica">Ética e Pilares</a></li>
-                        <li><a href="#contato" data-i18n="footerLinkContato">Contato</a></li>
+                        <li><a href="index.html" data-i18n="footerLinkHome">Home</a></li>
+                        <li><a href="sobre.html"footerLinkSobre">Sobre Nós</a></li>
+                        <li><a href="produtos.html" data-i18n="footerLinkAreas">Equipes</a></li>
+                        <li><a href="#mvv-cards" data-i18n="footerLinkEtica">Ética e Pilares</a></li>
+                        <li><a href="contato.html" data-i18n="footerLinkContato">Contato</a></li>
                     </ul>
                 </div>
                 <div class="footer-col contact-col">
@@ -309,11 +309,6 @@
                     <p><span data-i18n="footerEmail">Email:</span> <a
                             href="mailto:contato@pitagoras.com">contato@pitagoras.com</a></p>
                     <p data-i18n="footerPhone">Telefone: (11) 1234-5678</p>
-                    <div class="social-links">
-                        <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
-                        <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                        <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                    </div>
                 </div>
             </div>
         </footer>
