--- a/produtos.html
+++ b/produtos.html
@@ -8,8 +8,82 @@
   <title>π-Tágoras-EQUIPE</title>
   <link rel="shortcut icon" href="Imagem/LogoPi.png" type="image/x-icon">
   <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css" />
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css" />
   <script src="translation.js"></script>
+
+  <style>
+    :root {
+      --azul-marinho: #001c3a;
+      --amarelo-destaque: #ffc300;
+      --destaque-verde: #00cc99;
+      --cinza-claro: #e5e5e5;
+    }
+
+    .navbar {
+      background-color: var(--cinza-claro) !important;
+      padding: 1rem 5%;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    .navbar-brand {
+      font-size: 2rem;
+      font-weight: 900;
+      color: var(--azul-marinho) !important;
+    }
+
+    .nav-link {
+      color: var(--azul-marinho) !important;
+      font-weight: 600;
+      font-size: 1.1rem;
+      transition: color 0.3s;
+    }
+
+    .nav-link:hover {
+      color: var(--destaque-verde) !important;
+    }
+
+    .flag-btn {
+      width: 38px;
+      height: 38px;
+      padding: 0;
+      border: 2px solid transparent;
+      border-radius: 50%;
+      transition: all 0.3s;
+      overflow: hidden;
+    }
+
+    .flag-btn:hover {
+      border-color: var(--amarelo-destaque);
+      transform: scale(1.15);
+    }
+
+    .flag-btn span {
+      font-size: 22px;
+    }
+
+    /* Mobile: fundo escuro no menu aberto */
+    @media (max-width: 991px) {
+      .navbar-collapse {
+        background-color: var(--azul-marinho);
+        margin-top: 15px;
+        border-radius: 12px;
+        padding: 20px;
+      }
+
+      .nav-link {
+        color: white !important;
+        font-size: 1.3rem;
+        padding: 12px 0 !important;
+      }
+
+      .nav-link:hover {
+        color: var(--amarelo-destaque) !important;
+      }
+    }
+  </style>
 </head>
 
 <body>
@@ -30,33 +104,51 @@
   </div>
 
   <div class="main-content-wrapper">
-    <header>
-      <div class="logo">
-        <h1>π-Tágoras</h1>
+    <nav class="navbar navbar-expand-lg fixed-top">
+      <div class="container-fluid">
+
+        <!-- Logo -->
+        <a class="navbar-brand" href="index.html">π-Tágoras</a>
+
+        <!-- Botão hambúrguer (aparece só no mobile) -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
+          aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- Menu + Bandeiras -->
+        <div class="collapse navbar-collapse" id="navbarContent">
+          <ul class="navbar-nav ms-auto align-items-center gap-4">
+
+            <li class="nav-item">
+              <a class="nav-link" href="index.html" data-i18n="navHome">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="sobre.html" data-i18n="navSobre">Sobre Nós</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="produtos.html" data-i18n="navEquipes">Equipes</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contato.html" data-i18n="navContato">Contato</a>
+            </li>
+
+            <!-- Bandeiras de idioma -->
+            <li class="nav-item d-flex gap-2">
+              <button class="flag-btn" onclick="setLanguage('pt')" title="Português">
+                <span class="flag-icon flag-icon-br"></span>
+              </button>
+              <button class="flag-btn" onclick="setLanguage('en')" title="English">
+                <span class="flag-icon flag-icon-us"></span>
+              </button>
+              <button class="flag-btn" onclick="setLanguage('es')" title="Español">
+                <span class="flag-icon flag-icon-es"></span>
+              </button>
+            </li>
+          </ul>
+        </div>
       </div>
-      <button class="menu-toggle" aria-label="Abrir Menu">
-        <i class="fas fa-bars"></i>
-      </button>
-      <nav class="main-nav">
-        <ul>
-          <li><a href="index.html" data-i18n="nav_home">Home</a></li>
-          <li><a href="sobre.html" data-i18n="nav_about">Sobre Nós</a></li>
-          <li><a href="produtos.html" data-i18n="nav_teams">Equipes</a></li>
-          <li><a href="contato.html" data-i18n="nav_contact">Contato</a></li>
-        </ul>
-      </nav>
-      <div class="language-switcher">
-        <button onclick="setLanguage('pt')">
-          <span class="flag-icon flag-icon-br"></span>
-        </button>
-        <button onclick="setLanguage('en')">
-          <span class="flag-icon flag-icon-us"></span>
-        </button>
-        <button onclick="setLanguage('es')">
-          <span class="flag-icon flag-icon-es"></span>
-        </button>
-      </div>
-    </header>
+    </nav>
     <section id="produtos">
       <h2 data-i18n="teams_title">Nossas Equipes de <span>Pensadores</span></h2>
       <p data-i18n="teams_subtitle">Escolha um dos grupos abaixo para ver os 6 pilares de conhecimento que guiam nossa
@@ -359,15 +451,15 @@
           <h4 data-i18n="footerContactTitle">Fale Conosco</h4>
           <p data-i18n="footerEmail">Email: contato@pitagoras.com</p>
           <p data-i18n="footerPhone">Telefone: (11) 1234-5678</p>
-          <div class="social-links">
-            <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
-            <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-            <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-          </div>
+
         </div>
       </div>
     </footer>
   </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 
 </body>
 
