--- a/index.html
+++ b/index.html
@@ -385,9 +385,13 @@
         </section>
         <br>
         <br>
-        <button class="Sistema">
-            <a href="SistemaPI.cpp"><span class="Baixar">Baixar Sistema</span></a>
-        </button>
+        <a href="SistemaPI.cpp" download class="btn-flutuante">
+            <span class="btn-texto">Baixar Sistema</span>
+            <span class="btn-icone">
+                <i class="bi bi-download"></i>
+            </span>
+        </a>
+
 
         <footer>
             <div class="footer-container">
@@ -418,6 +422,8 @@
             </div>
         </footer>
     </div>
+
+    <script src="https://kit.fontawesome.com/dd1d2b7bc0.js" crossorigin="anonymous"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
@@ -506,8 +512,6 @@
             }
         }
         // --- FIM do JavaScript FADE ---
-
-
     </script>
 </body>
 
