--- a/sobre.html
+++ b/sobre.html
@@ -320,49 +320,49 @@
                 consultoria estratégica.</p>
             <div class="equipe-container">
                 <div class="membro-card">
-                    <div class="membro-foto-placeholder"></div>
+                    <div class="membro-foto-placeholder"><img src="Imagem/Arthur.jpg" alt="" class="foto"></div>
                     <h4 data-i18n="membro1Nome">Arthur Emmerich Lamas</h4>
-                    <p class="cargo" data-i18n="membro1Cargo">CEO e Responsável por estilizar o site</p>
+                    <p class="cargo" data-i18n="membro1Cargo">Front-End</p>
                     <p class="especialidade" data-i18n="membro1Espec">Ética Aplicada e Lógica Estoica</p>
                 </div>
                 <div class="membro-card">
-                    <div class="membro-foto-placeholder"></div>
-                    <h4 data-i18n="membro2Nome">Platão Ferreira</h4>
-                    <p class="cargo" data-i18n="membro2Cargo">Diretor de Estratégia</p>
+                    <div class="membro-foto-placeholder"><img src="Imagem/Mavi.jpg" alt="" class="foto"></div>
+                    <h4 data-i18n="membro2Nome">Maria</h4>
+                    <p class="cargo" data-i18n="membro2Cargo">Front-End</p>
                     <p class="especialidade" data-i18n="membro2Espec">Teoria do Conhecimento e Liderança</p>
                 </div>
                 <div class="membro-card">
-                    <div class="membro-foto-placeholder"></div>
-                    <h4 data-i18n="membro3Nome">Hipátia Nunes</h4>
+                    <div class="membro-foto-placeholder"><img src="Imagem/Murilo.jpg" alt="" class="foto"></div>
+                    <h4 data-i18n="membro3Nome">Murilo Caires</h4>
                     <p class="cargo" data-i18n="membro3Cargo">Consultora Sênior</p>
                     <p class="especialidade" data-i18n="membro3Espec">Filosofia da Ciência e Tomada de Decisão</p>
                 </div>
                 <div class="membro-card">
-                    <div class="membro-foto-placeholder"></div>
-                    <h4 data-i18n="membro4Nome">Aristóteles Mello</h4>
+                    <div class="membro-foto-placeholder"><img src="Imagem/Nicolas.jpg" alt="" class="foto"></div>
+                    <h4 data-i18n="membro4Nome">Nicolas Miguel</h4>
                     <p class="cargo" data-i18n="membro4Cargo">Especialista em Ética de IA</p>
                     <p class="especialidade" data-i18n="membro4Espec">Justiça Algorítmica e Raciocínio Formal</p>
                 </div>
                 <div class="membro-card">
-                    <div class="membro-foto-placeholder"></div>
-                    <h4 data-i18n="membro5Nome">Maria Arendt</h4>
+                    <div class="membro-foto-placeholder"><img src="Imagem/Pedro.jpg" alt="" class="foto"></div>
+                    <h4 data-i18n="membro5Nome">Pedro Lucas</h4>
                     <p class="cargo" data-i18n="membro5Cargo">Líder de Pesquisa</p>
                     <p class="especialidade" data-i18n="membro5Espec">Filosofia Política e Cultura Organizacional</p>
                 </div>
                 <div class="membro-card">
-                    <div class="membro-foto-placeholder"></div>
+                    <div class="membro-foto-placeholder"><img src="Imagem/Rafael.jpg" alt="" class="foto"></div>
                     <h4 data-i18n="membro6Nome">Immanuel Kant</h4>
                     <p class="cargo" data-i18n="membro6Cargo">Consultor de Ética Prática</p>
                     <p class="especialidade" data-i18n="membro6Espec">Dilemas Morais e Imperativo Categórico</p>
                 </div>
                 <div class="membro-card">
-                    <div class="membro-foto-placeholder"></div>
+                    <div class="membro-foto-placeholder"><img src="Imagem/Rick.jpg" alt="" class="foto"></div>
                     <h4 data-i18n="membro7Nome">Simon Beauvoir</h4>
                     <p class="cargo" data-i18n="membro7Cargo">Mentora Executiva</p>
                     <p class="especialidade" data-i18n="membro7Espec">Existencialismo e Autoconhecimento</p>
                 </div>
                 <div class="membro-card">
-                    <div class="membro-foto-placeholder"></div>
+                    <div class="membro-foto-placeholder"><img src="Imagem/Vincius.jpg" alt="" class="foto"></div>
                     <h4 data-i18n="membro8Nome">Laozi Chen</h4>
                     <p class="cargo" data-i18n="membro8Cargo">Estrategista de Relacionamento</p>
                     <p class="especialidade" data-i18n="membro8Espec">Filosofia Oriental e Gestão de Conflitos</p>
@@ -398,6 +398,7 @@
             </div>
         </footer>
     </div>
+    <script src="https://kit.fontawesome.com/dd1d2b7bc0.js" crossorigin="anonymous"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
